RESOLVED FIXED131875
Assertion in WebPage::runModal accesses object after it may have been destroyed
https://bugs.webkit.org/show_bug.cgi?id=131875
Summary Assertion in WebPage::runModal accesses object after it may have been destroyed
Darin Adler
Reported 2014-04-18 20:17:20 PDT
Assertion in WebPage::runModal accesses object after it may have been destroyed
Attachments
Patch (1.28 KB, patch)
2014-04-18 20:17 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2014-04-18 20:17:49 PDT
WebKit Commit Bot
Comment 2 2014-04-19 10:05:25 PDT
Comment on attachment 229706 [details] Patch Clearing flags on attachment: 229706 Committed r167534: <http://trac.webkit.org/changeset/167534>
WebKit Commit Bot
Comment 3 2014-04-19 10:05:29 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 4 2014-04-19 10:07:23 PDT
Note You need to log in before you can comment on or make changes to this bug.