Assertion in WebPage::runModal accesses object after it may have been destroyed https://bugs.webkit.org/show_bug.cgi?id=131875

Reviewed by Anders Carlsson.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::runModal): Ref the WebPage so it's still around so we can
check the m_isRunningModal flag.


Canonical link: https://commits.webkit.org/149954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167534 268f45cc-cd09-0410-ab3c-d52691b4dbfc